--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "grunt-cli": "~0.1.6",
     "grunt-contrib-jshint": "0.3.0",
     "grunt-bower-task": "0.4.0",
+    "grunt-war": "0.3.3",
     "karma": "~0.10",
     "protractor": "^1.1.1",
     "http-server": "^0.6.1",
