--- a/package.json
+++ b/package.json
@@ -1,42 +1,43 @@
 {
-  "name": "neon-gtd",
-  "description": "A sample geo-temporal analysis dashboard that uses the neon.js library to show interactions between multiple visualizations of a dataset.",
-  "version": "0.8.0",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/NextCenturyCorporation/neon-gtd"
-  },
-  "license": "Apache v2",
-  "private": true,
-  "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-cli": "~0.1.6",
-    "grunt-contrib-jshint": "0.3.0",
-    "grunt-bower-task": "0.4.0",
-    "grunt-war": "0.3.3",
-    "karma": "~0.10",
-    "protractor": "^1.1.1",
-    "http-server": "^0.6.1",
-    "bower": "^1.3.1",
-    "shelljs": "^0.2.6",
-    "karma-junit-reporter": "^0.2.2"
-  },
-  "scripts": {
-    "postinstall": "grunt",
+    "name": "neon-gtd",
+    "description": "A sample geo-temporal analysis dashboard that uses the neon.js library to show interactions between multiple visualizations of a dataset.",
+    "version": "0.8.0",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/NextCenturyCorporation/neon-gtd"
+    },
+    "license": "Apache v2",
+    "private": true,
+    "devDependencies": {
+        "grunt": "~0.4.1",
+        "grunt-cli": "~0.1.6",
+        "grunt-contrib-jshint": "0.3.0",
+        "grunt-bower-task": "0.4.0",
+        "grunt-war": "0.3.3",
+        "grunt-contrib-yuidoc": "~0.5.2",
+        "karma": "~0.10",
+        "protractor": "^1.1.1",
+        "http-server": "^0.6.1",
+        "bower": "^1.3.1",
+        "shelljs": "^0.2.6",
+        "karma-junit-reporter": "^0.2.2"
+    },
+    "scripts": {
+        "postinstall": "grunt",
 
-    "prestart": "npm install",
-    "start": "http-server -a localhost -p 8000 -c-1",
+        "prestart": "npm install",
+        "start": "http-server -a localhost -p 8000 -c-1",
 
-    "pretest": "npm install",
-    "test": "karma start karma.conf.js",
-    "test-single-run": "karma start karma.conf.js  --single-run",
+        "pretest": "npm install",
+        "test": "karma start karma.conf.js",
+        "test-single-run": "karma start karma.conf.js  --single-run",
 
-    "preupdate-webdriver": "npm install",
-    "update-webdriver": "webdriver-manager update",
+        "preupdate-webdriver": "npm install",
+        "update-webdriver": "webdriver-manager update",
 
-    "preprotractor": "npm run update-webdriver",
-    "protractor": "protractor e2e-tests/protractor.conf.js",
+        "preprotractor": "npm run update-webdriver",
+        "protractor": "protractor e2e-tests/protractor.conf.js",
 
-    "update-index-async": "node -e \"require('shelljs/global'); sed('-i', /\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/, '//@@NG_LOADER_START@@\\n' + sed(/sourceMappingURL=angular-loader.min.js.map/,'sourceMappingURL=bower_components/angular-loader/angular-loader.min.js.map','app/bower_components/angular-loader/angular-loader.min.js') + '\\n//@@NG_LOADER_END@@', 'app/index-async.html');\""
-  }
+        "update-index-async": "node -e \"require('shelljs/global'); sed('-i', /\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/, '//@@NG_LOADER_START@@\\n' + sed(/sourceMappingURL=angular-loader.min.js.map/,'sourceMappingURL=bower_components/angular-loader/angular-loader.min.js.map','app/bower_components/angular-loader/angular-loader.min.js') + '\\n//@@NG_LOADER_END@@', 'app/index-async.html');\""
+    }
 }
