NEON-1230: More jshint clean-up.

--- a/.jshintrc
+++ b/.jshintrc
@@ -19,6 +19,9 @@
         "ocpu": false,
         "OpenLayers": false,
         "OWF": false,
+        "Slick": false,
+        "tables": false,
+        "uuid": false,
         "window": false,
         "XDATA": false
     }
