NEON-1230: More jshint clean-up.

--- a/.jshintrc
+++ b/.jshintrc
@@ -1,28 +1,30 @@
 {
     "globalstrict": true,
     "globals": {
-        "$": false,
-        "_": false,
-        "activityLogger": false,
+        "$": true,
+        "_": true,
+        "activityLogger": true,
         "afterEach": false,
         "angular": false,
         "beforeEach": false,
-        "charts": false,
-        "d3": false,
-        "DEMO_CONFIG": false,
+        "charts": true,
+        "CircularHeatChart": true,
+        "coreMap": true,
+        "d3": true,
+        "DEMO_CONFIG": true,
         "describe": false,
         "expect": false,
         "it": false,
         "inject": false,
-        "module": false,
-        "neon": false,
-        "ocpu": false,
-        "OpenLayers": false,
-        "OWF": false,
-        "Slick": false,
-        "tables": false,
-        "uuid": false,
-        "window": false,
-        "XDATA": false
+        "module": true,
+        "neon": true,
+        "ocpu": true,
+        "OpenLayers": true,
+        "OWF": true,
+        "Slick": true,
+        "tables": true,
+        "uuid": true,
+        "window": true,
+        "XDATA": true
     }
 }
