--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "grunt-bower-task": "0.4.0",
     "grunt-cli": "~0.1.6",
     "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-jshint": "0.3.0",
+    "grunt-contrib-jshint": "0.10.0",
     "grunt-contrib-yuidoc": "~0.5.2",
     "grunt-war": "0.3.3",
     "karma": "~0.10",
@@ -25,7 +25,7 @@
     "karma-junit-reporter": "^0.2.2"
   },
   "scripts": {
-    "postinstall": "grunt bower:install",
+    "postinstall": "",
     "prestart": "npm install",
     "start": "http-server -a localhost -p 8000 -c-1",
     "pretest": "npm install",
