--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
     "private": true,
     "dependencies": {
         "angular": "1.2.x",
+        "angular-gridster": "0.10.x",
         "angular-loader": "1.2.x",
         "angular-mocks": "1.2.x",
         "angular-route": "1.2.x",
