--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "http-server": "^0.6.1",
     "bower": "^1.3.1",
     "shelljs": "^0.2.6",
-    "karma-junit-reporter": "^0.2.2"
+    "karma-junit-reporter": "^0.2.2",
+    "grunt-jscs": "=0.8.0"
   },
   "scripts": {
     "postinstall": "",
