Cleaning up license documentation

--- a/bower.json
+++ b/bower.json
@@ -6,12 +6,12 @@
     "license": "Apache v2",
     "private": true,
     "dependencies": {
-        "angular": "1.2.x",
-        "angular-loader": "1.2.x",
-        "angular-mocks": "1.2.x",
-        "angular-route": "1.2.x",
+        "angular": "1.2.26",
+        "angular-loader": "1.2.26",
+        "angular-mocks": "1.2.26",
+        "angular-route": "1.2.26",
         "bootstrap": "3.2.0",
-        "d3": "~3.0",
+        "d3": "3.0.8",
         "html5shiv": "3.7.2",
         "jquery": "1.11.1",
         "jquery-ui": "1.10.4",
@@ -22,7 +22,7 @@
         "openlayers": "https://github.com/openlayers/openlayers/releases/download/release-2.13.1/OpenLayers-2.13.1.zip",
         "openlayers-heatmap": "https://github.com/pa7/heatmap.js.git#v1.0",
         "owf": "https://www.owfgoss.org/nexus/content/groups/public/org/ozoneplatform/ozone-widgeting-framework/OWF-bundle/7.0.1/OWF-bundle-7.0.1-GA.zip",
-        "respond": "1.4.x",
+        "respond": "1.4.2",
         "slickgrid": "2.1.0",
         "xdatalogger": "https://github.com/draperlab/xdatalogger.git",
         "xdatalogger-worker": "https://raw.githubusercontent.com/draperlab/xdatalogger/master/javascript/draper.activity_worker-2.1.1.js"
@@ -116,5 +116,5 @@
             "css": "**/*.css"
         }
     }
-        
+
 }
