--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,7 @@
         "html5shiv": "3.7.2",
         "jquery": "1.11.1",
         "jquery-ui": "1.10.4",
-        "jquery.event.drag-drop": "2.2.1",
+        "threedubmedia.jquery.event": "2.2",
         "javascript-detect-element-resize": "sdecima/javascript-detect-element-resize#0.5.3",
         "jquery.tagcloud": "https://github.com/addywaddy/jquery.tagcloud.js.git",
         "mergesort": "https://github.com/justinforce/merge-sort/archive/1.0.zip",
@@ -58,7 +58,7 @@
             "js": "**/*min.js"
         },
 
-        "jquery.event.drag-drop": {
+        "threedubmedia.jquery.event": {
             "js": "**/jquery.event*.js",
             "css": "**/*.css"
         },
