--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
         "grunt-contrib-jshint": "0.10.0",
         "grunt-contrib-yuidoc": "~0.5.2",
         "grunt-war": "0.3.3",
-        "karma": "~0.10",
+        "grunt-karma": "~0.8.2",
+        "karma": "~0.12.9",
         "protractor": "^1.1.1",
         "http-server": "^0.6.1",
         "bower": "^1.3.1",
         "shelljs": "^0.2.6",
         "karma-junit-reporter": "^0.2.2",
+        "karma-phantomjs-launcher": "~0.1.4",
         "grunt-jscs": "=0.8.0"
     },
     "scripts": {
