Requiring braces on blocks with jshint and jscs

--- a/.jscsrc
+++ b/.jscsrc
@@ -1,5 +1,14 @@
 {
-    //"requireCurlyBraces": [],  //jshint covers this rule
+    "requireCurlyBraces": ["if",
+        "else",
+        "for",
+        "while",
+        "do",
+        "try",
+        "catch",
+        "case",
+        "default"
+    ],
     "requireSpaceAfterKeywords": [
         "do",
         "else",
