--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "bower": "^1.3.1",
         "shelljs": "^0.2.6",
         "karma-junit-reporter": "^0.2.2",
+        "karma-chrome-launcher": "0.1.7",
+        "karma-ng-html2js-preprocessor": "0.1.2",
         "karma-phantomjs-launcher": "~0.1.4",
         "grunt-jscs": "=0.8.0"
     },
