NEON-1376 Moved the visualization configuration information from addVisualization.js to config.json.

--- a/app/config/config.json
+++ b/app/config/config.json
@@ -17,5 +17,64 @@
     "dig": {
         "enabled": false,
         "server": "http://localhost:9000"
-    }
+    },
+
+    "visualizations": [{
+        "name": "Timeline",
+        "sizeX": 6,
+        "sizeY": 1,
+        "type": "timeline-selector",
+        "icon": "img/visualizations/Timeline64.png"
+    }, {
+        "name": "Map",
+        "sizeX": 4,
+        "sizeY": 2,
+        "type": "heat-map",
+        "icon": "img/visualizations/Map64.png"
+    }, {
+        "name": "Linechart",
+        "sizeX": 2,
+        "sizeY": 2,
+        "type": "linechart",
+        "icon": "img/visualizations/LineChart64.png"
+    }, {
+        "name": "Barchart",
+        "sizeX": 2,
+        "sizeY": 2,
+        "type": "barchart",
+        "icon": "img/visualizations/BarChart64.png"
+    }, {
+        "name": "Ops Clock",
+        "sizeX": 2,
+        "sizeY": 2,
+        "type": "circular-heat-form",
+        "icon": "img/visualizations/OpsClock64.png"
+    }, {
+        "name": "Tag Cloud",
+        "sizeX": 2,
+        "sizeY": 2,
+        "type": "tag-cloud",
+        "bindings": {
+            "tag-field": "'hashtags'"
+        },
+        "icon": "img/visualizations/TagCloud64.png"
+    }, {
+        "name": "Count By",
+        "sizeX": 2,
+        "sizeY": 2,
+        "type": "count-by",
+        "icon": "img/visualizations/Count64.png"
+    }, {
+        "name": "Sunburst",
+        "sizeX": 2,
+        "sizeY": 2,
+        "type": "sunburst",
+        "icon": "img/visualizations/Sunburst64.png"
+    }, {
+        "name": "View Data",
+        "sizeX": 6,
+        "sizeY": 2,
+        "type": "query-results-table",
+        "icon": "img/visualizations/ViewData64.png"
+    }]
 }
