NEON-1375 Moved the default visualization layout configuration information from neonDemoController.js to config.json.

--- a/app/config/config.json
+++ b/app/config/config.json
@@ -102,5 +102,34 @@
         "hostnameInput": "localhost",
         "selectedDb": "test",
         "selectedTable": "most_active"
+    }],
+
+    "layout": [{
+        "sizeX": 6,
+        "sizeY": 1,
+        "type": "timeline-selector"
+    }, {
+        "sizeX": 4,
+        "sizeY": 2,
+        "type": "heat-map"
+    }, {
+        "sizeX": 2,
+        "sizeY": 2,
+        "type": "circular-heat-form"
+    }, {
+        "sizeX": 2,
+        "sizeY": 2,
+        "type": "linechart"
+    }, {
+        "sizeX": 2,
+        "sizeY": 2,
+        "type": "barchart"
+    }, {
+        "sizeX": 2,
+        "sizeY": 2,
+        "type": "tag-cloud",
+        "bindings": {
+            "tag-field": "'hashtags'"
+        }
     }]
 }
